refactoring and auth
