# api/auth/model.go
@@ -4,3 +4,7 @@ type Auth struct {
 	Login    string `json:"login"`
 	Password string `json:"password"`
 }
+
+type AuthSuccess struct {
+	Token string `json:"token"`
+}
